--- a/练习2.html
+++ b/练习2.html
@@ -4,41 +4,52 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        #container{
+        /*#container{*/
+            /*width: 200px;*/
+        /*}*/
+        /*#container h3{*/
+            /*background: #000000;*/
+            /*color: #ffffff;*/
+            /*cursor: pointer;*/
+        /*}*/
+        /*#container .submenu li:hover {*/
+            /*background: #cccccc;*/
+        /*}*/
+        *{
+            margin: 0;
+        padding:0;
+        }
+        #div1{
             width: 200px;
+            height: 200px;
+            background: #ff0000;
+            position:relative;
+            left:0;
+            top:0;
         }
-        #container h3{
-            background: #000000;
-            color: #ffffff;
-            cursor: pointer;
-        }
-        #container .submenu li:hover {
-            background: #cccccc;
-        }
+
+
 
     </style>
 </head>
 <body>
-        <ul id="container">
-            <li>
-                <h3>管理区</h3>
-                <ul class="submenu">
-                    <li>001</li>
-                    <li>002</li>
-                    <li>003</li>
-                </ul>
-            </li>
-            <li>
-                <h3>交流区</h3>
-                <ul class="submenu">
-                    <li>001</li>
-                    <li>002</li>
-                    <li>003</li>
-                </ul>
-            </li>
-        </ul>
+    <button id="btn">move</button>
+    <div id="div1"></div>
+    <script src="../fellows14/shop/javascript/wichung-1.0.js"></script>
         <script>
-
+            var oBtn = document.getElementById("btn");
+            var oDiv = document.getElementById("div1");
+            oBtn.onclick = function(){
+                animate(
+                        oDiv,{
+                            top:100
+                        },function(){
+                            animate(oDiv,{
+                                left:400
+                            })
+                        }
+                )
+            }
         </script>
 </body>
 </html>
